# nucli-rusty

./: Cargo.toml  README.md
crates/nu-cli/: Cargo.toml
crates/nu-completion/: Cargo.toml
