[package]
authors = ["The Nu Project Contributors"]
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition = "2018"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
readme = "README.md"
repository = "https://github.com/nushell/nushell"
version = "0.34.0"

[workspace]
members = ["crates/*/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nu-ansi-term = "0.34.0"
nu-command = "0.34.0"
nu-data = "0.34.0"
nu-engine = "0.34.0"
nu-errors = "0.34.0"
nu-parser = "0.34.0"
nu-plugin = "0.34.0"
nu-protocol = "0.34.0"
nu-source = "0.34.0"
nu-stream = "0.34.0"
nu-value-ext = "0.34.0"

nu-cli = { version = "0.34.0", path="./crates/nu-cli", default-features=false }
nu-completion = { version = "0.34.0", path="./crates/nu-completion" }

# Required to bootstrap the main binary
ctrlc = { version="3.1.7", optional=true }
futures = { version="0.3.12", features=["compat", "io-compat"] }
itertools = "0.10.0"

[dev-dependencies]
nu-test-support = "0.34.0"
dunce = "1.0.1"
serial_test = "0.5.1"
hamcrest2 = "0.3.0"
rstest = "0.10.0"

[build-dependencies]

[features]
ctrlc-support = ["nu-cli/ctrlc", "nu-command/ctrlc"]
rustyline-support = ["nu-cli/rustyline-support", "nu-command/rustyline-support"]
term-support = ["nu-command/term"]
uuid-support = ["nu-command/uuid_crate"]
which-support = ["nu-command/which", "nu-engine/which"]

default = [
    "nu-cli/shadow-rs",
    "ctrlc-support",
    "term-support",
    "rustyline-support",
]

stable = ["default"]

# Stable (Default)
#inc = ["nu_plugin_inc"]
#match = ["nu_plugin_match"]
#post = ["nu_plugin_post"]
#ps = ["nu_plugin_ps"]
#sys = ["nu_plugin_sys"]
#textview = ["nu_plugin_textview"]

#This is disabled in extra for now
table-pager = ["nu-command/table-pager"]

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
